--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section id="header">
+        <!-------------------------------------------------------->
+        <nav id="navBar">
+            <div class="logo">
+                <h1>LOGO HERE</h1>
+            </div>
+            <div class="navLinks">
+                <ul>
+                    <li><a href="#">By Solutions</a></li>
+                    <li><a href="#">By Industry</a></li>
+                    <li><a href="#">Plans & Offer</a></li>
+                    <li><a href="#">Data Centers</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="tryForFreeButtonDiv">
+                <button class="tryForFreeButton">Try for Free</button>
+            </div>
+        </nav>
+                <!-------------------------------------------------------->
+    </section>
 </body>
 </html>
