--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Futuristic</title>
     <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="Bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="Bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <section id="header">
-        <!-------------------------------------------------------->
-        <nav id="navBar">
-            <div class="logo">
-                <h1>LOGO HERE</h1>
+        <div class="transparentALetter">
+            <!-------------------------------------------------------->
+            <nav id="navBar">
+                <div class="logo">
+                    <h1>LOGO HERE</h1>
+                </div>
+                <div class="navLinks">
+                    <ul>
+                        <li><a href="#">By Solutions</a></li>
+                        <li><a href="#">By Industry</a></li>
+                        <li><a href="#">Plans & Offer</a></li>
+                        <li><a href="#">Data Centers</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="tryForFreeButtonDiv">
+                    <button class="tryForFreeButton">Try for Free</button>
+                </div>
+            </nav>
+            <!-------------------------------------------------------->
+            <div class="row headerContent">
+                <div class="col-lg-6 col-md-12 headerText">
+                    <p>--- Cloud Hosting</p>
+                    <h3>It's Time To Give Your Business</h3>
+                    <h1>A Futuristic Spin</h1>
+                    <h2>Host Any Software On Our Secured Cloud Now</h2>
+                    <div class="buttons">
+                        <button class="tryForFreeButton2">Try for Free</button>
+                        <button class="seePlansOffersButton">See Plans & Offers</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 headerImages">
+                    <div class="whiteBox"></div>
+                    <div class="redBox"></div>
+                    <img class="img1" src="images/1.png">
+                    <img class="img2" src="images/2.png">
+                </div>
             </div>
-            <div class="navLinks">
-                <ul>
-                    <li><a href="#">By Solutions</a></li>
-                    <li><a href="#">By Industry</a></li>
-                    <li><a href="#">Plans & Offer</a></li>
-                    <li><a href="#">Data Centers</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div>
-            <div class="tryForFreeButtonDiv">
-                <button class="tryForFreeButton">Try for Free</button>
-            </div>
-        </nav>
-                <!-------------------------------------------------------->
+        </div>
     </section>
-</body>
+</body> 
+
 </html>
