--- a/index.html
+++ b/index.html
@@ -53,6 +53,70 @@
             </div>
         </div>
     </section>
-</body> 
+    <!-------------------------------------------------------------------------------------------------->
+    <section id="companiesLogo">
+        <div class="container compiesLogochild">
+            <p>Trusted BY <i class="fas fa-arrow-right"></i></p>
+            <div class="row">
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company1.png"></div>
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company2.png"></div>
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company3.png"></div>
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company4.png"></div>
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company5.png"></div>
+                <div class="col-lg-2 col-md-4 col-sm-4 eachCompany"><img src="images/company6.png"></div>
+            </div>
+        </div>
+    </section>
+    <!----------------------------------------------------------------------------------------------------->
+    <section id="hostingServices">
+        <div class="container hostingServicesChild"><hr>
+            <h1>Our Applications <span>Hosting Services</span></h1>
+            <p>We host any application on our secured cloud at nominal prices.</p>
+            <div class="row mainRow">
+
+
+                <div class="col-3 QuickBookscol">
+                    <div class="row QuickBooksTextRow"><img src="images/books.png"></div>
+                    <div class="row QuickBooksTextRow">
+                        <h2>QuickBooks</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore earum odio, mollitia
+                            praesentium fugit aliquam distinctio et nisi corporis inventore iusto sapiente laboriosam a,
+                            velit facilis iste illo quos consequuntur!</p>
+                        <button class="bookNowButton">Book Now</button>
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-9 cloudHosting">
+                    <div class="row">
+                        <button>Cloud Hosting</button>
+                        <button>Buy Licence</button>
+                    </div>
+                    <div class="row">
+                        <div class="container">
+                            <div class="row"><img src="images/arrow.png"></div>
+                            <div class="row">
+                                <div class="col-7 ">
+                                    <h1>Heading One</h1>
+                                    <hr>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, sed. Non
+                                        vitae deserunt architecto provident voluptates iure recusandae aut beatae ullam
+                                        libero. Rerum vel eius deleniti magni minima saepe dolores!</p>
+                                        <button>Compare Plans</button>
+                                        <button>Explore QuickBooks Hosting</button>
+                                </div>
+                                <div class="col-5">
+                                    <img src="images/manTakinglaptop.png">
+                                </div>
+                            </div>
+                            <div class="row"><p>Unlimited <a href="#">Add-Ones</a>,<a href="#">Integrations</a>,and <a href="#">Application</a> scan be hosted along with QuickBooks</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+</body>
 
 </html>
