Cloud Hosting Section Completed

--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
     </section>
     <!----------------------------------------------------------------------------------------------------->
     <section id="hostingServices">
-        <div class="container hostingServicesChild"><hr>
+        <div class="container hostingServicesChild">
+            <hr>
             <h1>Our Applications <span>Hosting Services</span></h1>
             <p>We host any application on our secured cloud at nominal prices.</p>
             <div class="row mainRow">
 
 
-                <div class="col-3 QuickBookscol">
+                <div class="QuickBookscol">
                     <div class="row QuickBooksTextRow"><img src="images/books.png"></div>
                     <div class="row QuickBooksTextRow">
                         <h2>QuickBooks</h2>
@@ -89,29 +90,37 @@
 
 
 
-                <div class="col-9 cloudHosting">
-                    <div class="row">
-                        <button>Cloud Hosting</button>
-                        <button>Buy Licence</button>
+                <div class="cloudHosting">
+                    <div class="row buttonOfHostingPage">
+                        <button class="cloudHostingButton">Cloud Hosting</button>
+                        <button class="buyLicenceButton">Buy Licence</button>
                     </div>
                     <div class="row">
                         <div class="container">
                             <div class="row"><img src="images/arrow.png"></div>
                             <div class="row">
-                                <div class="col-7 ">
+                                <div class="col-7 cloudHostingContent">
                                     <h1>Heading One</h1>
-                                    <hr>
+                                    <div class="hLine">
+                                        <hr>
+                                    </div>
+
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, sed. Non
                                         vitae deserunt architecto provident voluptates iure recusandae aut beatae ullam
                                         libero. Rerum vel eius deleniti magni minima saepe dolores!</p>
-                                        <button>Compare Plans</button>
-                                        <button>Explore QuickBooks Hosting</button>
+                                    <div class="hostingButtons">
+                                        <button class="comparePlans">Compare Plans</button><br>
+                                        <button class="exploreQuickBooksHosting">Explore QuickBooks Hosting</button>
+                                    </div>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-5 cloudHostingImageCol">
                                     <img src="images/manTakinglaptop.png">
                                 </div>
                             </div>
-                            <div class="row"><p>Unlimited <a href="#">Add-Ones</a>,<a href="#">Integrations</a>,and <a href="#">Application</a> scan be hosted along with QuickBooks</p></div>
+                            <div class="row unlimitedPtag">
+                                <p>Unlimited <a href="#">Add-Ones</a>,<a href="#">Integrations</a>,and <a
+                                        href="#">Application</a> scan be hosted along with QuickBooks</p>
+                            </div>
                         </div>
                     </div>
                 </div>
